# vm_ai_agent

./: FIXES_SUMMARY.md  LICENSE  MANIFEST.in  README.md  bash.exe.stackdump  enhanced_install_vm_agent.sh  install.sh  install_vm_agent.sh  install_vm_agent_fixed.sh  install_vm_agent_improved.sh  mcp_http_server.py  pyproject.toml  requirements.txt  server.py  setup.py  setup.sh  setup_provisioning_token.sh  sh.exe.stackdump  test_shell.py
ai_infra_vm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: agent_config.yaml
scripts/: README.md  diagnose_environment.py  fix_venv_issue.py  get_provisioning_token.py  get_token.sh  quick_fix.sh  test_server.py
systemd/: vm-agent.service
tests/: __init__.py  test_client.py
tools/: __init__.py  file_manager.py  log_analyzer.py  shell_executor.py  system_monitor.py
vm_agent/: __init__.py  cli.py  client.py  installer.py  py.typed  server.py  server.py.backup
vm_agent/tools/: __init__.py  file_manager.py  log_analyzer.py  security_manager.py  shell_executor.py  system_monitor.py  tenant_manager.py  websocket_handler.py  websocket_handler.py.backup
